more changes, lots of random numbers now!

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- JQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Javascript game -->
     <script src="assets/javascript/game.js" type="text/javascript"></script>
-    <!-- JQuery CDN -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Sweet Alert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Favicon -->
@@ -49,10 +49,10 @@
             </p>
         </div>
         <div class="row">
-            <div class="col-md-6 randomNumber">
-                Random number goes here.
+            <div class="col-md-6" id="randomNumber">
+                <!-- Random number goes here. -->
             </div>
-            <div class="col-md-6 winsLosses">
+            <div class="col-md-6" id="winsLosses">
                 wins & Losses go here
             </div>
         </div>
