--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- JQuery CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!--Javascript game -->
-    <script src="assets/javascript/game.js" type="text/javascript"></script>
     <!-- Sweet Alert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!-- Favicon -->
@@ -50,22 +46,25 @@
         </div>
         <div class="row">
             <div class="col-md-6" id="randomNumber">
-                <!-- Random number goes here. -->
+
             </div>
-            <div class="col-md-6" id="winsLosses">
-                wins & Losses go here
+            <div class="col-md-3" id="wins">
+                Wins:
+            </div>
+            <div class="col-md-3" id="losses">
+                Loss:
             </div>
         </div>
     </div>
 
     <div class="container">
         <div class="row">
-            <div class="col-md-3 totalScore">
-                Total Score here
+            <div class="col-md-6 totalScore">
+                
             </div>
-            <div class="col-md-3 usersNum">
+            <!-- <div class="col-md-3 usersNum">
                 Users Value here
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -77,22 +76,22 @@
                 crystals go here.
                 <div class="row">
                     <div class="col-md-3">
-                        <div id="crystal1">
+                        <div class="crystal1">
                             <img id="crystals" src="assets/images/blue.jpg" alt="blue gem">
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div id="crystal2">
+                        <div class="crystal2">
                             <img id="crystals" src="assets/images/green.png" alt="green gem">
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div id="crystal3">
+                        <div class="crystal3">
                             <img id="crystals" src="assets/images/pink.jpg" alt="pink gem">
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div id="crystal4">
+                        <div class="crystal4">
                             <img id="crystals" src="assets/images/yellow.jpg" alt="yellow gem">
                         </div>
                     </div>
@@ -100,7 +99,10 @@
             </div>
         </div>
     </div>
-
+<!-- JQuery CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--Javascript game -->
+<script src="assets/javascript/game.js" type="text/javascript"></script>
 </body>
 
 </html>
