--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="card-header">
                 <h2>The low down in crystal town!</h2>
             </div>
-            <div class="card-body">
+            <div class="card-body rules-body">
                 <p>
                     Here you will be assigned a random number when the game starts.
                 </p>
@@ -100,29 +100,27 @@
 
 
     <div class="container">
-        <div class="row">
-            
-                <div class="col-md-3">
-                    <div class="crystal1">
-                        <img id="crystals" src="assets/images/blue.jpg" alt="blue gem">
-                    </div>
+        <div class="row crystals-body">
+            <div class="col-md-3">
+                <div class="crystal1">
+                    <img id="crystals" src="assets/images/blue.jpg" alt="blue gem">
                 </div>
-                <div class="col-md-3">
-                    <div class="crystal2">
-                        <img id="crystals" src="assets/images/green.png" alt="green gem">
-                    </div>
+            </div>
+            <div class="col-md-3">
+                <div class="crystal2">
+                    <img id="crystals" src="assets/images/green.png" alt="green gem">
                 </div>
-                <div class="col-md-3">
-                    <div class="crystal3">
-                        <img id="crystals" src="assets/images/pink.jpg" alt="pink gem">
-                    </div>
+            </div>
+            <div class="col-md-3">
+                <div class="crystal3">
+                    <img id="crystals" src="assets/images/pink.jpg" alt="pink gem">
                 </div>
-                <div class="col-md-3">
-                    <div class="crystal4">
-                        <img id="crystals" src="assets/images/yellow.jpg" alt="yellow gem">
-                    </div>
+            </div>
+            <div class="col-md-3">
+                <div class="crystal4">
+                    <img id="crystals" src="assets/images/yellow.jpg" alt="yellow gem">
                 </div>
-            
+            </div>
         </div>
     </div>
     <!-- JQuery CDN -->
